# pl_y1_m2_lab6

./: .gitignore  CMakeLists.txt  main.cpp
